--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
 project(HTTPExample)
 
-add_executable(HTTPExample example.c httplibrary.c string_lib.c)
+add_executable(HTTPExample example.c httplibrary_unix.c buffer_lib.c)
 target_include_directories(HTTPExample PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
